tolk-tester/tests/invalid-syntax/err-3390.tolk
fun main(): int {
    ;; here not a comment
}

/**
@compilation_should_fail
@stderr error: expected `;`, got `not`
 */
